--- a/src/app/nav/nav.component.css
+++ b/src/app/nav/nav.component.css
@@ -1,21 +1,18 @@
+input:hover, 
+input:active, 
+input:focus,
+button:hover, 
+button:active, 
+button:focus{
+    outline:0px !important;
+    -webkit-appearance:none;
+    box-shadow: none !important;
+    -webkit-box-shadow: none !important;
+}
 .navbar{
-    background-color: white;
+    background-color: rgb(0, 6, 88);
 }
 
-mat-form-field{
-    width: 60px;
-    font-size: 0.9em;
-  
-    
-}
-
-::ng-deep .mat-form-field-underline {
-    display: none;
-  }
-
-::ng-deep .mat-form-field-type-mat-select .mat-form-field-label, .mat-select-value, .mat-select {
-    color: black;
-  }
 
   a{
     text-decoration: none;
@@ -23,26 +20,30 @@ mat-form-field{
 
   
 .form-control{
-  margin: 5px;
-  border-radius: 40px;
   font-size: 1em;
   background-color: transparent;
-  color: black;
+  color: white;
   width: 400px;
+  margin-right: 5px;
 }
 
 .btn-search{
-  border-radius: 50%;
-  font-size: 2.2em;
-  color: black;
-  padding: 5px;
+  color: #ffffff;
   background-color: transparent;
   border: transparent;
 }
 
 .search-bar{
-  background-color: white;
   padding: 5px;
-  color: black;
+  color: white;
   height: auto;
+  background-color: rgb(0, 4, 54);
+  border-radius: 20px;
+}
+
+.form-control{
+  border: none;
+}
+.form-control:focus{
+  border: none;
 }
