--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,58 +1,19 @@
 <nav class="navbar navbar-expand navbar-ligth">
-    <div class="p-1 navbar-brand"> <a href="" class="text-dark h4">
-
-            <span class="text-dark">Whats</span>
-            <span class="text-warning">Price</span>
-
-
-        </a></div>
-    <div class="search-bar mx-auto">
-
-
-        <div class="d-flex flex-row ">
-
-
-
-
-            <form class="form" (submit)='search()'>
-                <div class="d-flex flex-row ">
-                    <input class="form-control text-dark" [(ngModel)]="keyword" type="search" name="search" id="search"
-                        placeholder="ex. Iphone 11, Samsung A50">
-
-                    <button type="submit" class="btn-search">
-                        <div class="d-flex">
-                            <li class="fa fa-search p-1"></li>
-                        </div>
-                    </button>
-                </div>
-            </form>
-        </div>
+    <div class="p-1 navbar-brand"> <a routerLink="" class="text-dark h4">
+            <span class="text-white">Price</span>
+            <span class="text-warning">Of</span>
+        </a>
+        <span class="text-white"> {{query | titlecase}} </span>
     </div>
-    <div class="p-1 ml-auto" >
-        <small hidden>
-            <mat-form-field>
-                <mat-label>USD </mat-label>
-                <mat-select disabled>
-                    <mat-option>None</mat-option>
-                    <mat-option value="option1">Option 1</mat-option>
-                    <mat-option value="option2">Option 2</mat-option>
-                    <mat-option value="option3">Option 3</mat-option>
-                </mat-select>
-            </mat-form-field>
-        </small>
-    </div>
-    <div class="p-1" hidden>
-        <small>
-            <mat-form-field>
-                <mat-label>EN</mat-label>
-                <mat-select disabled>
-                    <mat-option>None</mat-option>
-                    <mat-option value="option1">Option 1</mat-option>
-                    <mat-option value="option2">Option 2</mat-option>
-                    <mat-option value="option3">Option 3</mat-option>
-                </mat-select>
-            </mat-form-field>
-        </small>
-    </div>
+    <div class="search-bar ml-auto">
 
+        <form class="form d-flex" (submit)='search()'>
+            <input class="form-control" [(ngModel)]="keyword" type="search" name="search" id="search"
+                placeholder="Search... ex. Iphone 11, Samsung A50">
+            <button class="btn btn-search" type="submit"><i class="fa fa-search"></i></button>
+        </form>
+    </div>
+    <div class="p-3">
+        <a href="#" class="h2 text-light"><i class="fa fa-github"></i></a>
+    </div>
 </nav>
